--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: nextprotload-tr11750-MP
+DATE: 7/1/15
+STAFF: pf
+CHANGES: merge point tag
+
 TAG: nextprotload-5-1-3-1
 DATE: 03/29/2013
 STAFF: dbm
