--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,9 @@
+TAG: nextprotload-6-0-4-1
+DATE: 06/16/2016
+STAFF: lec 
+CHANGES:
+1) convert to git
+
 TAG: nextprotload-6-0-1-1
 DATE: 11/30/2015
 STAFF: dbm
