--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,9 @@
+TAG: nextprotload-6-0-17-2
+DATE: 10/18/2021
+STAFF: dbm
+CHANGES:
+1) index.html: new input file link
+
 TAG: nextprotload-6-0-17-1
 DATE: 10/18/2021
 STAFF: dbm
